--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "REST APIs con Express y Typescript",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon --exec tsx src/index.ts"
   },
   "author": "Milton Vergara Garcia @notlimdev",
   "license": "ISC",
   "devDependencies": {
+    "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.1",
     "typescript": "^5.6.2"
