0008: Instalación Dependencia Express
1º => esta dependencia instalada se usa para una infeaestructura web
rapida y flexible, recomendada para su uso de aplicaciones web
monoliticas.

2º => requerimientos:   npm i express  & npm i -D @types/express

--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
   "author": "Milton Vergara Garcia @notlimdev",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^5.0.0",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.1",
     "typescript": "^5.6.2"
+  },
+  "dependencies": {
+    "express": "^4.21.0"
   }
 }
