--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "pg": "^8.13.0",
     "pg-hstore": "^2.3.4",
