--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,11 @@ dist-ssr
 *.local
 .env
 
+#archivos http
+http
+*.http
+requests.http*
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
